# comedi_calibrate

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
comedi_calibrate/: Makefile.am  cal_common.c  calib.h  cb.c  cb64.c  comedi_calibrate.c  ni.c  ni_labpc.c  ni_m_series.c
comedi_soft_calibrate/: Makefile.am  calibration_set.cpp  calibration_set.hpp  calibrator.hpp  calibrator_misc.cpp  calibrator_misc.hpp  comedi_soft_calibrate.cpp  comedi_wrapper.cpp  comedi_wrapper.hpp  ni_m_series_calibrator.cpp  ni_m_series_calibrator.hpp
comedi_soft_calibrate/results/: README
debian/: .gitignore  control  copyright  mk_changelog  rules
libcomedi_calibrate/: Makefile.am  save_cal.c
man/: Makefile.am  comedi_calibrate.8
